--- a/index.html
+++ b/index.html
@@ -20,37 +20,48 @@
         <li><a href="#">Buy</a></li>
       </ul>
     </header>
-    <!-- <section class="container">
-      <div class="introduction">
-        <div class="logo">
-          <img src="./asii-coin.svg" />
+    <section class="container">
+      <div class="row1">
+        <div class="col">
+          <img id="logo" src="./asii_coin.svg" />
         </div>
-        <div class="title">
-          <h1>ASII COIN</h1>
+        <div class="col">
+          <div class="box">
+            <div class="title">
+              <h1>ASII COIN</h1>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              numquam quibusdam autem repudiandae sit tempora dolore amet fugit.
+              Veniam praesentium placeat blanditiis quidem, odio ullam quam id
+              reiciendis molestiae. Temporibus!
+            </p>
+          </div>
         </div>
       </div>
-      <div class="description">
-        <div class="text">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate numquam quibusdam
-            autem repudiandae sit tempora dolore amet fugit. Veniam praesentium placeat blanditiis
-            quidem, odio ullam quam id reiciendis molestiae. Temporibus!
-          </p>
+      <div class="row1">
+        <div class="col">
+          <div class="box">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit
+              dolore similique, soluta ad facere voluptate eaque delectus, nisi
+              itaque magni dignissimos quos fuga, provident error harum. Velit
+              commodi adipisci tempora.
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="image">
+            <img src="./asiibirou.png" alt="" />
+          </div>
         </div>
       </div>
-
+    </section>
+    <!-- 
       <div class="help-me-to-find-a-name-for-this-class">
-        <div class="image">
-          <img src="" alt="" />
-        </div>
-        <div class="text">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit dolore similique,
-            soluta ad facere voluptate eaque delectus, nisi itaque magni dignissimos quos fuga,
-            provident error harum. Velit commodi adipisci tempora.
-          </p>
-        </div>
+        
+        
       </div>
-    </section> -->
+    -->
   </body>
 </html>
